--- a/assets/style.css
+++ b/assets/style.css
@@ -22,15 +22,17 @@
     margin-left: auto;
     margin-right: auto;
    }
-   
    ul {
     padding-left: 40px;
     font-size: 20px;
    }
-   
-   p {
+    p {
     text-align: center;
     font-size: 30px;
-
-   
+}
+.card {
+    width: 80%;
+    margin: 40px auto;
+    border: 5px solid gray;
+    box-shadow: 5px 10px #888888;
 }
