--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@
    footer {
     width: 100%;
     height: 120px;
-    background-color: green;
+    background-color: blue;
     color: white;
    }
     h1,
