--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
    footer {
     width: 100%;
     height: 120px;
-    background-color: blue;
+    background-color: green;
     color: white;
    }
    
